--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 body
 {
-	font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     background-color : #CDCDCD;
     font-weight: 300;
     font-size: 19px;
@@ -129,11 +129,11 @@ body
 	<td><img id="myPicture" src="./src/p.jpg" style="float:left; padding-right:10px" height="200px"></td>
 	<td>
 	<div id="DocInfo">
-		<h1>Sk. Arif Ahmed</h1>
+		<h1>Sk. Arif Ahmed</h1><h3>, Ph.D</h3>
         Ph.D. Candidate at NIT Durgapur<br>
 		Assistant Professor at <a href="http://www.hithaldia.ac.in" target="_blank">Haldia Institute of Technology</a><br>
         Email: <a href="mailto:arif.1984.in@ieee.org">arif.1984.in@ieee.org</a><br>
-        <a href="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en">Google Scholar</a> •<a href="https://www.researchgate.net/profile/Arif_Ahmed_Sk">ResearchGate</a>
+        <a href="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en">Google Scholar</a> â€¢<a href="https://www.researchgate.net/profile/Arif_Ahmed_Sk">ResearchGate</a>
 	</div><br>
     <div id="mit_logo">
     </div>
@@ -142,10 +142,10 @@ body
 	</tbody></table>
 
 	<h2>About Me</h2>
-     • I am a Ph.D. Candidate in <a href="http://www.nitdgp.ac.in/">National Institute of Technolgy Durgapur</a>, advised by Dr. <a href="http://www.iitbbs.ac.in/profile.php/dpdogra/">Debi Prosad Dogra</a>, School of Electrical Sciences, <a href="http://www.iitbbs.ac.in/">IIT Bhubaneswar</a> and Dr. <a href="http://www.nitdgp.ac.in/faculty_details.php?id=103">Samarjit Kar</a>, Departmet of Mathematics, NIT Durgapur. I have completed Master in Computer Applications from West Bengal University of Technology in 2008, and Bachelor of Science (Physics, Mathematics and Computer Science) in August 2005 from The University of Burdwan.
+     â€¢ I am a Ph.D. Candidate in <a href="http://www.nitdgp.ac.in/">National Institute of Technolgy Durgapur</a>, advised by Dr. <a href="http://www.iitbbs.ac.in/profile.php/dpdogra/">Debi Prosad Dogra</a>, School of Electrical Sciences, <a href="http://www.iitbbs.ac.in/">IIT Bhubaneswar</a> and Dr. <a href="http://www.nitdgp.ac.in/faculty_details.php?id=103">Samarjit Kar</a>, Departmet of Mathematics, NIT Durgapur. I have completed Master in Computer Applications from West Bengal University of Technology in 2008, and Bachelor of Science (Physics, Mathematics and Computer Science) in August 2005 from The University of Burdwan.
  <br> 
-     • My research is on computer vision and machine learning, particularly I am interested in the surveillance applications and intelligent camera.<br> 
-	 • I am also working as Assistant Professor in Computer Applications at <a href="http://www.hithaldia.ac.in" target="_blank">Haldia Institute of Technology</a>.
+     â€¢ My research is on computer vision and machine learning, particularly I am interested in the surveillance applications and intelligent camera.<br> 
+	 â€¢ I am also working as Assistant Professor in Computer Applications at <a href="http://www.hithaldia.ac.in" target="_blank">Haldia Institute of Technology</a>.
  <br> 
 	<h2>Journal Publications</h2>
 	<table class="pub_table">
