--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body
 	<td><img id="myPicture" src="./src/p.jpg" style="float:left; padding-right:10px" height="200px"></td>
 	<td>
 	<div id="DocInfo">
-		<h1>Sk. Arif Ahmed</h1><h3>, Ph.D</h3>
+		<font size=12>Sk. Arif Ahmed</font><font size=9>, Ph.D</font>
         Ph.D. Candidate at NIT Durgapur<br>
 		Assistant Professor at <a href="http://www.hithaldia.ac.in" target="_blank">Haldia Institute of Technology</a><br>
         Email: <a href="mailto:arif.1984.in@ieee.org">arif.1984.in@ieee.org</a><br>
