--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body
 	}
 	h2
 	{
-		font-size:130%;
+		font-size:90%;
 	}
 	p
 	{
@@ -129,7 +129,7 @@ body
 	<td><img id="myPicture" src="./src/p.jpg" style="float:left; padding-right:10px" height="200px"></td>
 	<td>
 	<div id="DocInfo">
-		<font size="10">Sk. Arif Ahmed</font><font size="7">, Ph.D</font><br />
+		<h2>Sk. Arif Ahmed, Ph.D</h2>
         Ph.D. Candidate at NIT Durgapur<br>
 		Assistant Professor at <a href="http://www.hithaldia.ac.in" target="_blank">Haldia Institute of Technology</a><br>
         Email: <a href="mailto:arif.1984.in@ieee.org">arif.1984.in@ieee.org</a><br>
