--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ body
 	{
 		font-size:90%;
 	}
+	h3
+	{
+		font-size:80%;
+	}
 	p
 	{
 		color: #5B5B5B;
@@ -130,9 +134,9 @@ body
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D</h2>
-        Ph.D. Candidate at NIT Durgapur<br>
-		Assistant Professor at <a href="http://www.hithaldia.ac.in" target="_blank">Haldia Institute of Technology</a><br>
-        Email: <a href="mailto:arif.1984.in@ieee.org">arif.1984.in@ieee.org</a><br>
+                <h3> Postdoc, Department of Physics and Technology, <a href="https://www.uit.no/en" target="_blank">University of Tromsø, Norway
+		<h3>Former Assistant Professor at <a href="http://www.hithaldia.ac.in" target="_blank">Haldia Institute of Technology</a><br>
+        Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</a><br>
         <a href="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en">Google Scholar</a> •<a href="https://www.researchgate.net/profile/Arif_Ahmed_Sk">ResearchGate</a>
 	</div><br>
     <div id="mit_logo">
