--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@ body
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D</h2>
-                <h3> Postdoc, Department of Physics and Technology, <a href="https://www.uit.no/en" target="_blank">University of Tromsø, Norway</h3>
-		<h3>Former Assistant Professor at <a href="http://www.hithaldia.ac.in" target="_blank">Haldia Institute of Technology</a></h3>
-			<h3>Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</a></h3>
+		Postdoc, Department of Physics and Technology, University of Tromsø, Norway</ br>
+		Former Assistant Professor at Haldia Institute of Technology, India</ br>
+		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</ br>
         <h3><a href="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en">Google Scholar</a> •<a href="https://www.researchgate.net/profile/Arif_Ahmed_Sk">ResearchGate</a></h3>
 	</div><br>
     <div id="mit_logo">
