--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@ body
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D</h2>
-		Postdoc, Department of Physics and Technology, University of Tromsø, Norway</ br>
+		<h3>Postdoc, Department of Physics and Technology, University of Tromsø, Norway</ br>
 		Former Assistant Professor at Haldia Institute of Technology, India</ br>
-		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</ br>
+		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</ h3>
         <h3><a href="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en">Google Scholar</a> •<a href="https://www.researchgate.net/profile/Arif_Ahmed_Sk">ResearchGate</a></h3>
 	</div><br>
     <div id="mit_logo">
