--- a/index.html
+++ b/index.html
@@ -143,12 +143,14 @@ body
 	</tbody></table>
 
 	<h2>About Me</h2>
+		<div  align="justify">
     Arif Ahmed is a Post Doctoral Research Fellow in the Department of Physics and Technology at the University of Tromsø (UiT), Norway. From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. He holds invited position as Research Consultant in Imaging Media Research Center at Korea Institute of Sciece and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
 <br/>
 Arif completed his Ph.D. at National Institute of Technology Durgapur, India and his undergraduate studies at Burdwan University. His research interests lie in the area of Computer Vision and Artificial Intelligence, ranging from theory to design to implementation. He has collaborated actively with researchers in several other disciplines of computer science, physics, biology particularly computer vision application on problems at the multi disciplinary environment.
 <br/>
 Arif has served on roughly 15 conference and workshop program committees and served as the Organizing Chair for ICITAM 2017, Publication Chair in ICITAM 2019. He has served on the ICMC 2013, 2015, and 2019 as Organizing Member. He is a member of IEEE and Digital Life Norway (DLN).
-	<h2>Journal Publications</h2>
+		</div>
+			<h2>Journal Publications</h2>
 	<table class="pub_table">
 	<tbody>
 
