--- a/index.html
+++ b/index.html
@@ -154,10 +154,18 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 	<table class="pub_table">
 	<tbody>
 
+		
+	 <tr>
+           <td class="pub_td1"><img src="./src/fingure.png" class="papericon"></td>
+           <td class="pub_td2">S Mukherjee, <u>A. Ahmed</u>, D. P. Dogra, S. Kar, P. P. Roy.<br><b>Fingertip Detection and Tracking for Recognition of Air-Writing in Videos</b><br><i>Expert Systems with Applications (2019)</i><br>
+           [<a href="#">Accepted</a>]
+                    </td>
+         </tr>
+		
 
  <tr>
            <td class="pub_td1"><img src="./src/survey.png" class="papericon"></td>
-           <td class="pub_td2"><u>A. Ahmed</u>, D. P. Dogra, S. Kar, P. P. Roy.<br><b>Trajectory-based surveillance analysis: A survey</b><br><i>IEEE Transactions on Circuits and Systems for Video Technology</i><br>
+           <td class="pub_td2"><u>A. Ahmed</u>, D. P. Dogra, S. Kar, P. P. Roy.<br><b>Trajectory-based surveillance analysis: A survey</b><br><i>IEEE Transactions on Circuits and Systems for Video Technology (2018)</i><br>
            [<a href="https://doi.org/10.1109/TCSVT.2018.2857489" target="_blank">doi</a>]
                     </td>
          </tr>
