--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 	 <tr>
            <td class="pub_td1"><img src="./src/fingure.png" class="papericon"></td>
            <td class="pub_td2">S Mukherjee, <u>A. Ahmed</u>, D. P. Dogra, S. Kar, P. P. Roy.<br><b>Fingertip Detection and Tracking for Recognition of Air-Writing in Videos</b><br><i>Expert Systems with Applications (2019)</i><br>
-           [<a href="#">Accepted</a>]
+           [<a href="https://doi.org/10.1016/j.eswa.2019.06.034">doi</a>]
                     </td>
          </tr>
 		
