--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body
 
 	<h2>About Me</h2>
 		<div  align="justify">
-    Arif Ahmed is a Post Doctoral Research Fellow in the Department of Physics and Technology at the University of Tromsø (UiT), Norway. From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. He holds invited position as Research Consultant in Imaging Media Research Center at Korea Institute of Sciece and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
+    Arif Ahmed is a Post Doctoral Research Fellow with <a href="https://sites.google.com/site/uthkrishth/krishnaagarwal" target="_blank">Krishna Agarwal</a> in the Department of Physics and Technology at the University of Tromsø (UiT), Norway. From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. He holds invited position as Research Consultant in Imaging Media Research Center at Korea Institute of Sciece and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
 <br/>
 Arif completed his Ph.D. at National Institute of Technology Durgapur, India and his undergraduate studies at Burdwan University. His research interests lie in the area of Computer Vision and Artificial Intelligence, ranging from theory to design to implementation. He has collaborated actively with researchers in several other disciplines of computer science, physics, biology particularly computer vision application on problems at the multi disciplinary environment.
 <br/>
