--- a/index.html
+++ b/index.html
@@ -119,6 +119,22 @@ body
         -webkit-box-shadow: 3px 3px 6px #888;
         box-shadow: 3px 3px 6px #888;
     }
+.site-avatar {
+  float: left;
+  width: 70px;
+  height: 70px;
+  margin-right: 15px;
+}
+@media screen and (max-width: 640px) {
+  .site-avatar {
+    float: none;
+    display: block;
+    margin: 0 auto;
+  }
+}
+.site-avatar img {
+  border-radius: 5px;
+}
 </style>
 
 </head>
@@ -130,7 +146,10 @@ body
 
 	<table>
 	<tbody><tr>
-	<td><img id="myPicture" src="./src/p.jpg" style="float:left; padding-right:10px" height="200px"></td>
+	<td> 
+		<a href="/" class="site-avatar"><img id="myPicture" src="./src/p.jpg" style="float:left; padding-right:10px" height="200px">
+		</a>
+	</td>
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D</h2>
