--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body
 	<tbody><tr>
 		
 	<td> 
-		<a href="/"><img id="myPicture" src="./src/p.jpg" style="float:left; padding-right:10px; border-radius: 8px;" height="200px">
+		<a href="/"><img id="myPicture" src="./src/p.jpg" style="float:left; padding-right:10px; border-radius: 10px 10px;" height="200px">
 		</a>
 	</td>
 	<td>
