--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 		   <tr>
            <td class="pub_td1"><img src="./src/snap_0.jpg" class="papericon"></td>
            <td class="pub_td2"><u>A. Ahmed</u>, D. P. Dogra, S. Kar, R. Patnaik, S. Lee, H. Choi, I. J. Kim.<br><b>Query-based Video Synopsis for Intelligent Traffic Monitoring Applications.</b><br><i>IEEE Transactions on Intelligent Transportation Systems  (2019)</i><br>
-           [<a href="http://yvdirectory.org/4theye/demo/" target="_blank">Demo</a>] [<a href="https://doi.org/10.1109/TITS.2019.2929618">doi</a>        </td>
+           [<a href="http://yvdirectory.org/4theye/demo/" target="_blank">Demo</a>] [<a href="https://doi.org/10.1109/TITS.2019.2929618">doi]</a>        </td>
          </tr>
 		
 		
