--- a/index.html
+++ b/index.html
@@ -158,7 +158,14 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 			<h2>Journal Publications</h2>
 	<table class="pub_table">
 	<tbody>
-
+		
+           <tr>
+           <td class="pub_td1"><img src="./src/qa.png" class="papericon"></td>
+		   <td class="pub_td2">B. Das, M. Majumder, S. Phadikar, <u>A. Ahmed</u><br><b>Automatic Generation of Fill‐in‐the‐blank Question with Corpus‐based Distractors for e‐assessment to Enhance Learning.</b>
+			   <br><i>Computer Applications in Engineering Education (2019)</i><br>
+           [<a href="https://doi.org/10.1002/cae.22163">doi</a>]        </td>
+         </tr>
+		
 		
 		   <tr>
            <td class="pub_td1"><img src="./src/snap_0.jpg" class="papericon"></td>
