--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 	<tbody>
 		
            <tr>
-           <td class="pub_td1"><img src="./src/qa.png" class="papericon"></td>
+           <td class="pub_td1"><img src="./src/qa.jpg" class="papericon"></td>
 		   <td class="pub_td2">B. Das, M. Majumder, S. Phadikar, <u>A. Ahmed</u><br><b>Automatic Generation of Fill‐in‐the‐blank Question with Corpus‐based Distractors for e‐assessment to Enhance Learning.</b>
 			   <br><i>Computer Applications in Engineering Education (2019)</i><br>
            [<a href="https://doi.org/10.1002/cae.22163">doi</a>]        </td>
