--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 	<ul>
 	
 		<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>Q. Zhe, A. A. Sekh, C. Quek and D. K. Prasad, <b>
-		Recurrent Self-evolving Takagi–Sugeno–Kan Fuzzy Neural Network (RST-FNN) based Type-2 Diabetic Modeling</b>, 
+		Recurrent Self-evolving Takagi-Sugeno-Kan Fuzzy Neural Network (RST-FNN) based Type-2 Diabetic Modeling</b>, 
 	<a href="http://www.intsci.ac.cn/icis2020/" target="_blank"> The Fourth International Conference on Intelligence Science (ICIS2020)</a>, India</li>
 	
 	<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>S. Mandal, A. A. Sk and S. K. Naskar, <b>Identification of Relevant Quantities in Arithmetic Word Problems using Siamese Neural Network</b>, 
