--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ button:visited {
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D</h2>
-		<h3>Postdoc, Department of Physics and Technology, University of TromsÃ¸, Norway<br/>
+		<h3>Postdoc, Department of Physics and Technology, University of TromsØ¸, Norway<br/>
 		Former Assistant Professor at Haldia Institute of Technology, India<br/>
 		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</ h3>
         <h3><div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0706-2565" href="https://orcid.org/0000-0003-0706-2565" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-0706-2565</a></div>
