--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 <h2>News</h2>
 	
 	<ul>
+		
+		<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>S. W. Jun, A. A. Sekh, C. Quek and D. K. Prasad, <b>
+		seMLP: Self-Evolving Multi-Layer Perceptron in Stock Trading Decision Making</b>, SN Computer Science, Springer
+	</li>
 	
 		<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>Q. Zhe, A. A. Sekh, C. Quek and D. K. Prasad, <b>
 		Recurrent Self-evolving Takagi-Sugeno-Kan Fuzzy Neural Network (RST-FNN) based Type-2 Diabetic Modeling</b>, 
