--- a/index.html
+++ b/index.html
@@ -264,6 +264,15 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 <h2>News</h2>
 	
 	<ul>
+		<li>March'21,<font color="red"><b> Accepted !!! </b> </font>S. Samonto, S. Kar, S. Pal, A. A. Sekh, O. Castillo, G. Park <b>
+		Automatic Question Generation and Answer Assessment: A Survey</b>, International Transactions on Electrical Energy Systems
+, Wiley
+	</li>
+		
+		
+		<li>March'21,<font color="red"><b> Accepted !!! </b> </font>B. Das; M. Majumder, S. Phadikar,A. A Sekh, <b>
+		Automatic Question Generation and Answer Assessment: A Survey</b>, Research and Practice in Technology Enhanced Learning, Springer
+	</li>
 		
 		<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>S. W. Jun, A. A. Sekh, C. Quek and D. K. Prasad, <b>
 		seMLP: Self-Evolving Multi-Layer Perceptron in Stock Trading Decision Making</b>, SN Computer Science, Springer
