--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Arif has served on roughly 15 conference and workshop program committees and ser
 	
 	<ul>
 		<li>March'21,<font color="red"><b> Accepted !!! </b> </font>S. Samonto, S. Kar, S. Pal, A. A. Sekh, O. Castillo, G. Park <b>
-		Automatic Question Generation and Answer Assessment: A Survey</b>, International Transactions on Electrical Energy Systems
+		Best Fit Membership Function for Designing Fuzzy Logic Controller Aided Intelligent Overcurrent Fault Protection Scheme</b>, International Transactions on Electrical Energy Systems
 , Wiley
 	</li>
 		
