--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ button:visited {
 		<h2>Sk. Arif Ahmed, Ph.D.</h2>
 		<h3> Assistant Proessor, XIM University, Bhubaneswar, India
 		<br/>
-		Former Postdoc, Department of Physics and Technology, University of TromsØ¸, Norway;
+		Former Postdoc, Department of Physics and Technology, University of TromsØ, Norway;
 		<br/>
 		Assistant Professor at Haldia Institute of Technology, India<br/>
 		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</ h3>
@@ -256,51 +256,26 @@ button:visited {
 
 	<h2>About Me</h2>
 		<div  align="justify">
-    Arif Ahmed is a Post Doctoral Research Fellow with <a href="https://sites.google.com/site/uthkrishth/krishnaagarwal" target="_blank">Krishna Agarwal</a> in the Department of Physics and Technology at the University of TromsÃ¸ (UiT), Norway. From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. He holds invited position as Research Consultant in Imaging Media Research Center at Korea Institute of Sciece and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
+    Arif Ahmed is Assistant Proessor in the School of Computer Science and ENgineering, XIM University, Bhubaneswar, India.
+	Previously, he was Post-doctoral Research Fellow with <a href="https://sites.google.com/site/uthkrishth/krishnaagarwal" target="_blank">Krishna Agarwal</a> in the Department of Physics and Technology at the University of TromsØ,(UiT), Norway. 
+	From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. 
+	He holds invited position as Research Consultant in Imaging Media Research Center at Korea Institute of Sciece and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
 <br/>
 Arif completed his Ph.D. at National Institute of Technology Durgapur, India and his undergraduate studies at Burdwan University. His research interests lie in the area of Computer Vision and Artificial Intelligence, ranging from theory to design to implementation. He has collaborated actively with researchers in several other disciplines of computer science, physics, biology particularly computer vision application on problems at the multi disciplinary environment.
 <br/>
-Arif has served on roughly 15 conference and workshop program committees and served as the Organizing Chair for ICITAM 2017, Publication Chair in ICITAM 2019. He has served on the ICMC 2013, 2015, and 2019 as Organizing Member. He is a member of IEEE and Digital Life Norway (DLN).
+Arif has served on roughly 25 conference and workshop program committees and served as the Organizing Chair for ICITAM 2017, Publication Chair in ICITAM 2019. He has served on the ICMC 2013, 2015, and 2019 as Organizing Member. He is a Senior Member of IEEE and Digital Life Norway (DLN).
 		</div>
 			
 			
 <h2>News</h2>
 	
 	<ul>
-		<li>March'21,<font color="red"><b> Accepted !!! </b> </font>S. Samonto, S. Kar, S. Pal, A. A. Sekh, O. Castillo, G. Park <b>
-		Best Fit Membership Function for Designing Fuzzy Logic Controller Aided Intelligent Overcurrent Fault Protection Scheme</b>, International Transactions on Electrical Energy Systems
-, Wiley
-	</li>
-		
-		
-		<li>March'21,<font color="red"><b> Accepted !!! </b> </font>B. Das; M. Majumder, S. Phadikar,A. A Sekh, <b>
-		Automatic Question Generation and Answer Assessment: A Survey</b>, Research and Practice in Technology Enhanced Learning, Springer
-	</li>
-		
-		<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>S. W. Jun, A. A. Sekh, C. Quek and D. K. Prasad, <b>
-		seMLP: Self-Evolving Multi-Layer Perceptron in Stock Trading Decision Making</b>, SN Computer Science, Springer
-	</li>
-	
-		<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>Q. Zhe, A. A. Sekh, C. Quek and D. K. Prasad, <b>
-		Recurrent Self-evolving Takagi-Sugeno-Kan Fuzzy Neural Network (RST-FNN) based Type-2 Diabetic Modeling</b>, 
-	<a href="http://www.intsci.ac.cn/icis2020/" target="_blank"> The Fourth International Conference on Intelligence Science (ICIS2020)</a>, India</li>
 	
 	<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>S. Mandal, A. A. Sk and S. K. Naskar, <b>Identification of Relevant Quantities in Arithmetic Word Problems using Siamese Neural Network</b>, 
 	<a href="https://icmc2021.in/" target="_blank"> 7th International Conference on Mathematics and Computing
 
 ICMC 2021</a>, India</li>
   
-	
- <li>Jan'21,<font color="red"><b> Accepted !!! </b> </font>A. Somani, A. A Sekh, I-S. Opstad, AB Birgisdottir, T Myrmel, BS Ahluwalia, K Agarwal, Dilip K
-Prasad, A. Horsch, <b>Digital Staining of Mitochondria in Label-free Live-cell Microscopy</b>, <a href="https://www.bvm-workshop.org/" target="_blank"> Bildverarbeitung für die Medizin - Algorithmen System Anwendungen – 2021</a>, Germany</li>
-  
-        <li>Jan'21,<font color="red"><b> Accepted !!! </b> </font>M. Islam, S. Joardar, A. A. Sekh, <b>RingFIR: A large volume 
-		earring dataset for fashion image retrieval</b>, Fifth IAPR International Conference on Computer Vision & Image 
-		Processing <a href="https://cvip2020.iiita.ac.in/" target="_blank">(CVIP 2020)</a>,
-India </li>
-
-   <li>Jan'21,<font color="red"><b> Accepted !!! </b> </font>S. Das, S. Kar, A. A. Sekh, <b>A large volume dataset for grading tomato freshness quality</b>, The Fifth
-IAPR International Conference on Computer Vision & Image Processing <a href="https://cvip2020.iiita.ac.in/" target="_blank">(CVIP 2020)</a>, India </li>
   </ul>    
 	
 <h2>Activities</h2>
