--- a/pub.html
+++ b/pub.html
@@ -253,7 +253,22 @@ button:visited {
 <button class="button--6"><a href="contact.html">Contact</a></button>
 </tr>
 	</tbody></table>
+	
+	<h2>Year 2021</h2>
+	
+	<div>[J18] Samonto, S., Kar, S., Pal, S.,<b>A. A. Sekh</b>, & Sarkar, B. (2021). Fuzzy Based Algorithm for Stage-I of Cascaded Intelligent Relaying. International Journal of Intelligence Science, 11(01), 31.
+	
+	<div>[C11] A. Somani, <b>A. A. Sekh</b>, I-S. Opstad, AB Birgisdottir, T Myrmel, BS Ahluwalia, K Agarwal, Dilip K Prasad, A. Horsch, Digital Staining of Mitochondria in Label-free Live-cell Microscopy, Bildver-arbeitung für die 
+	Medizin - Algorithmen System Anwendungen – 2021, Germany, Bildverarbei-tung für die Medizin . Informatik aktuell. Springer 
+	
+	
 	<h2>Year 2020</h2>
+	
+	<div>[C10] S. Das, S. Kar, <b>A. A. Sekh</b>, A large volume dataset for grading tomato freshness quality, The Fifth IAPR International Conference on Computer Vision & Image Processing (CVIP 2020), India   	</div>
+	
+	<div>[C9] M. Islam, S. Joardar, <b>A. A. Sekh</b>, RingFIR: A large volume earring dataset for fashion image re-trieval, Fifth IAPR International Conference on Computer Vision & Image Processing (CVIP 2020); India
+	</div>
+	
 	<div>[C8] <b>A. A Sekh</b>, I-S. Opstad, AB Birgisdottir, T Myrmel, BS Ahluwalia, K Agarwal, Dilip K Prasad,
 Learning nanoscale motion patterns of vesicles in living cells, IEEE Conference on Computer Vision
 and Pattern Recognition (CVPR), 2020
