--- a/pub.html
+++ b/pub.html
@@ -255,11 +255,40 @@ button:visited {
 	</tbody></table>
 	
 	<h2>Year 2021</h2>
+	<div>[J25] Das B, Majumder M, Phadikar S, <b>A. A. Sekh</b>. Multiple-choice question generation with auto-generated distractors for computer-assisted educational assessment. 
+	Multimedia Tools and Applications. 2021</div>
 	
-	<div>[J18] Samonto, S., Kar, S., Pal, S.,<b>A. A. Sekh</b>, & Sarkar, B. (2021). Fuzzy Based Algorithm for Stage-I of Cascaded Intelligent Relaying. International Journal of Intelligence Science, 11(01), 31.
+	
+	<div>[J24] Samonto S, Kar S, Pal S, Ozkan AT, <b>A. A. Sekh</b>. Fuzzy Logic Controller Aided Expert Relaying Mechanism System. 
+	Journal of the Franklin Institute. Elsevier, 2021</div>
+	
+	
+	<div>[J23] Das, B., <b>A. A. Sekh</b>, Majumder, M. et al. Can deep learning solve a preschool image understanding problem?. 
+	Neural Comput & Applic (2021). https://doi.org/10.1007/s00521-021-06080-w</div>
+	
+	
+	<div>[J22] R.Pal, <b>A. A. Sekh</b>, D.P.Dogra, S.Kar, D.P.Prasad, Topic-based Video Analysis: A Survey, 
+	ACM Computing Survey, ACM, 2021, https://doi.org/10.1145/3459089</div>
+	
+	
+	<div>[J21] B. Das; M. Majumder, S. Phadikar,<b>A. A. Sekh</b>, Automatic Question Generation and Answer As-sessment: A Survey, 
+	Research and Practice in Technology Enhanced Learning, Springer, 2021</div>
+	
+	<div>[J20] Jun, S. W., <b>A. A. Sekh</b>, Quek, C., & Prasad, D. K. seMLP: Self-evolving Multi-layer Perceptron in Stock Trading Decision Making. 
+	SN Computer Science, 2021, 2(2), 1-11</div>
+	
+	
+	<div>[J19] S. Samonto, S. Kar, S. Pal, <b>A. A. Sekh</b>, O. Castillo, G. Park Best Fit Membership Function for De-signing Fuzzy Logic Controller Aided Intelligent Overcurrent Fault Protection Scheme, 
+	International Transactions on Electrical Energy Systems , Wiley, 2021</div>
+	
+	<div>[C12] Zhe, Q. E., <b>A. A. Sekh</b>, Quek, C., & Prasad, D. K. (2021, February). Recurrent Self-evolving Takagi–Sugeno–Kan Fuzzy Neural Network (RST-FNN) Based Type-2 Diabetic Modeling. 
+	In International Conference on Intelligence Science (pp. 125-136). Springer, Cham. </div>
+	
+	
+	<div>[J18] Samonto, S., Kar, S., Pal, S.,<b>A. A. Sekh</b>, & Sarkar, B. (2021). Fuzzy Based Algorithm for Stage-I of Cascaded Intelligent Relaying. International Journal of Intelligence Science, 11(01), 31.</div>
 	
 	<div>[C11] A. Somani, <b>A. A. Sekh</b>, I-S. Opstad, AB Birgisdottir, T Myrmel, BS Ahluwalia, K Agarwal, Dilip K Prasad, A. Horsch, Digital Staining of Mitochondria in Label-free Live-cell Microscopy, Bildver-arbeitung für die 
-	Medizin - Algorithmen System Anwendungen – 2021, Germany, Bildverarbei-tung für die Medizin . Informatik aktuell. Springer 
+	Medizin - Algorithmen System Anwendungen – 2021, Germany, Bildverarbei-tung für die Medizin . Informatik aktuell. Springer </div>
 	
 	
 	<h2>Year 2020</h2>
