--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ button:visited {
 		<h2>Sk. Arif Ahmed, Ph.D.</h2>
 		<h3> Assistant Proessor, XIM University, Bhubaneswar, India
 		<br/>
-		Former Postdoc, Department of Physics and Technology, University of TromsØ, Norway;
+		Former Postdoc, Department of Physics and Technology, UiT The Arctic University of Norway, Norway;
 		<br/>
 		Assistant Professor at Haldia Institute of Technology, India<br/>
 		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</ h3>
@@ -257,7 +257,7 @@ button:visited {
 	<h2>About Me</h2>
 		<div  align="justify">
     Arif Ahmed is Assistant Proessor in the School of Computer Science and ENgineering, XIM University, Bhubaneswar, India.
-	Previously, he was Post-doctoral Research Fellow with <a href="https://sites.google.com/site/uthkrishth/krishnaagarwal" target="_blank">Krishna Agarwal</a> in the Department of Physics and Technology at the University of TromsØ,(UiT), Norway. 
+	Previously, he was Post-doctoral Research Fellow with <a href="https://sites.google.com/site/uthkrishth/krishnaagarwal" target="_blank">Krishna Agarwal</a> in the Department of Physics and Technology at the UiT The Arctic University of Norway, TromsØ, Norway. 
 	From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. 
 	He holds invited position as Research Consultant in Imaging Media Research Center at Korea Institute of Sciece and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
 <br/>
