--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ button:visited {
 	<h2>About Me</h2>
 		<div  align="justify">
     Arif Ahmed is Assistant Proessor in the School of Computer Science and ENgineering, XIM University, Bhubaneswar, India.
-	Previously, he was Post-doctoral Research Fellow with <a href="https://sites.google.com/site/uthkrishth/krishnaagarwal" target="_blank">Krishna Agarwal</a> in the Department of Physics and Technology at the UiT The Arctic University of Norway, TromsØ, Norway. 
+	Previously, he was Post-doctoral Research Fellow in the Department of Physics and Technology at the UiT The Arctic University of Norway, TromsØ, Norway. 
 	From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. 
 	He holds invited position as Research Consultant in Imaging Media Research Center at Korea Institute of Sciece and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
 <br/>
@@ -266,6 +266,17 @@ Arif completed his Ph.D. at National Institute of Technology Durgapur, India and
 Arif has served on roughly 25 conference and workshop program committees and served as the Organizing Chair for ICITAM 2017, Publication Chair in ICITAM 2019. He has served on the ICMC 2013, 2015, and 2019 as Organizing Member. He is a Senior Member of IEEE and Digital Life Norway (DLN).
 		</div>
 			
+<h2>Past Labs</h2>			
+<ul>
+	
+	<li><a href="https://www.3dnanoscopy.com/about-2/" target="_blank">3dNanoscopy@UiT</a>, UiT, Norway</li>
+	
+	<li><a href="https://sites.google.com/iitbbs.ac.in/hmsrg/people?authuser=0" target="_blank">Human-Machine Systems Research Group</a>, IIT Bhubaneswar, India</li>
+	
+	
+	
+  
+  </ul>    
 			
 <h2>News</h2>
 	
