--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ button:visited {
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D.</h2>
-		<h3> Assistant Proessor, XIM University, Bhubaneswar, India
+		<h3> Assistant Professor, XIM University, Bhubaneswar, India
 		<br/>
 		Senior Memmber IEEE
 		<br/>
