--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ button:visited {
 		<h2>Sk. Arif Ahmed, Ph.D.</h2>
 		<h3> Assistant Professor, XIM University, Bhubaneswar, India
 		<br/>
-		Senior Memmber IEEE
+		Senior Member, IEEE
 		<br/>
 		Former Postdoc, Dept. of Physics and Technology, UiT The Arctic University of Norway, Norway;
 		<br/>
@@ -258,10 +258,10 @@ button:visited {
 
 	<h2>About Me</h2>
 		<div  align="justify">
-    Arif Ahmed is Assistant Proessor in the School of Computer Science and ENgineering, XIM University, Bhubaneswar, India.
+    Arif Ahmed is Assistant Professor in the School of Computer Science and Engineering, XIM University, Bhubaneswar, India.
 	Previously, he was Post-doctoral Research Fellow in the Department of Physics and Technology at the UiT The Arctic University of Norway, TromsØ, Norway. 
 	From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. 
-	He holds invited position as Research Consultant in Imaging Media Research Center at Korea Institute of Sciece and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
+	He holds invited position as Research Consultant in Imaging Media Research Centre at Korea Institute of Science and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
 <br/>
 Arif completed his Ph.D. at National Institute of Technology Durgapur, India and his undergraduate studies at Burdwan University. His research interests lie in the area of Computer Vision and Artificial Intelligence, ranging from theory to design to implementation. He has collaborated actively with researchers in several other disciplines of computer science, physics, biology particularly computer vision application on problems at the multi disciplinary environment.
 <br/>
