--- a/colaborators.html
+++ b/colaborators.html
@@ -225,15 +225,25 @@ button:visited {
 	<tbody><tr>
 		
 	<td> 
-		<a href="/"><img id="myPicture" src="./src/p2.jpg" style="float:left; padding-right:10px; border-radius: 10px 10px;" height="150px">		</a>	</td>
+		<a href="/"><img id="myPicture" src="./src/p3.jpg" style="float:left; padding-right:10px; border-radius: 10px 10px;" height="150px">
+		</a>
+	</td>
 	<td>
 	<div id="DocInfo">
-		<h2>Sk. Arif Ahmed, Ph.D</h2>
-		<h3>Postdoc, Department of Physics and Technology, University of TromsÃ¸, Norway<br/>
-		Former Assistant Professor at Haldia Institute of Technology, India<br/>
-		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com</ h3>
-        <h3><div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0706-2565" href="https://orcid.org/0000-0003-0706-2565" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-0706-2565</a></div>
-	<h3><div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en" href="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="src/google-scholar-logo.jpg" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en</a></div>	</td>
+		<h2>Sk. Arif Ahmed, Ph.D.</h2>
+		<h3> Assistant Professor, XIM University, Bhubaneswar, India
+		<br/>
+		Senior Member, IEEE
+		<br/>
+		Former Postdoc, Dept. of Physics and Technology, UiT The Arctic University of Norway, Norway;
+		<br/>
+		Assistant Professor at Haldia Institute of Technology, India<br/>
+		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com
+	<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0706-2565" href="https://orcid.org/0000-0003-0706-2565" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-0706-2565</a></div>
+	<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en" href="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="src/google-scholar-logo.jpg" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en</a></div>
+
+	
+	</td>
 	</tr>
 	<tr>
 <button><a href="index.html">Home</a></button>
