--- a/contact.html
+++ b/contact.html
@@ -258,11 +258,11 @@ button:visited {
 
     
     <h2>Contact</h2>
-   Dr. Arif Ahmed Sekh </br>
-Department of Physics & Technology,</br>
-UiT-The Arctic University of Norway,</br>
-Hansine Hansens veg 18</br>
-9019 Tromsø, Norway</br>
+   Dr. Arif Ahmed </br>
+School of Computer Science and Engineering,</br>
+XIM University, Bhubaneswar</br>
+Plot No:12(A), Nijigada, Kurki, Harirajpur,</br>
+Odisha 752050</br>
     </div>
 </div>
 </body></html>
