--- a/teaching.html
+++ b/teaching.html
@@ -266,6 +266,61 @@ button:visited {
         <strong>Course    details</strong> </td>
     <td width="328" valign="top" bgcolor="#CCCCCC" class="style1"><p class="style1"><strong>Responsibilities    (&#9679;), additional remarks (&#9675;), and feedback (&#9788;)</strong></p></td>
   </tr>
+
+ <tr>
+    <td  valign="top" class="style1"><p><span class="style1"><strong>Course:</strong> Computer Vision and Image Processing (UG, PG, XIM University, India)<br />
+            <strong>Years involved:</strong> 2021-2024<br />
+            <strong>Role:</strong> Course Design, Lecture, Practical</span></p></td>
+    <td width="328" valign="top" class="style1"><ul>
+      <li>Design of curriculum.</li>
+      <li>Classroom Lecture.</li>
+      <li>Practical Session.</li>
+      <li>Supervision.</li>
+      <li>Evaluate.</li>
+    </ul></td>
+  </tr>
+ 
+
+ <tr>
+    <td  valign="top" class="style1"><p><span class="style1"><strong>Course:</strong> Deep Learning (UG, PG, XIM University, India)<br />
+            <strong>Years involved:</strong> 2021-2024<br />
+            <strong>Role:</strong> Course Design, Lecture, Practical</span></p></td>
+    <td width="328" valign="top" class="style1"><ul>
+      <li>Design of curriculum.</li>
+      <li>Classroom Lecture.</li>
+      <li>Practical Session.</li>
+      <li>Supervision.</li>
+      <li>Evaluate.</li>
+    </ul></td>
+  </tr>
+
+	 <tr>
+    <td  valign="top" class="style1"><p><span class="style1"><strong>Course:</strong> Database Management System (UG, XIM University, India)<br />
+            <strong>Years involved:</strong> 2021-2024<br />
+            <strong>Role:</strong> Course Design, Lecture, Practical</span></p></td>
+    <td width="328" valign="top" class="style1"><ul>
+      <li>Design of curriculum.</li>
+      <li>Classroom Lecture.</li>
+      <li>Practical Session.</li>
+      <li>Supervision.</li>
+      <li>Evaluate.</li>
+    </ul></td>
+  </tr>
+
+<tr>
+    <td  valign="top" class="style1"><p><span class="style1"><strong>Course:</strong>Computer Organization and Architecture (UG, XIM University, India)<br />
+            <strong>Years involved:</strong> 2021-2024<br />
+            <strong>Role:</strong> Course Design, Lecture, Practical</span></p></td>
+    <td width="328" valign="top" class="style1"><ul>
+      <li>Design of curriculum.</li>
+      <li>Classroom Lecture.</li>
+      <li>Practical Session.</li>
+      <li>Supervision.</li>
+      <li>Evaluate.</li>
+    </ul></td>
+  </tr>
+
+	
   <tr>
     <td  valign="top" class="style1"><p><span class="style1"><strong>Course</strong>: Special Curriculum on Imaging artefacts in nanoscopy &nbsp;(Special course for interns, UiT, Norway)<br />
             <strong>Years involved:</strong> 2020<br />
