--- a/index.html
+++ b/index.html
@@ -228,9 +228,11 @@ button:visited {
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D.</h2>
-		<h3> Assistant Professor, XIM University, Bhubaneswar, India
+		<h3> Senior Researcher, UiT The Arctic University of Norway, Norway;
 		<br/>
 		Senior Member, IEEE
+		<br/>
+		Former Assistant Professor, School of Computer Science and Engineering, XIM University, Bhubaneswar, India;
 		<br/>
 		Former Postdoc, Dept. of Physics and Technology, UiT The Arctic University of Norway, Norway;
 		<br/>
@@ -258,14 +260,11 @@ button:visited {
 
 	<h2>About Me</h2>
 		<div  align="justify">
-    Arif Ahmed is Assistant Professor in the School of Computer Science and Engineering, XIM University, Bhubaneswar, India.
-	Previously, he was Post-doctoral Research Fellow in the Department of Physics and Technology at the UiT The Arctic University of Norway, TromsØ, Norway. 
-	From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. 
-	He holds invited position as Research Consultant in Imaging Media Research Centre at Korea Institute of Science and Technology (KIST), Korea and in School of Electrical Sciences IIT Bhubaneswar, India.
-<br/>
-Arif completed his Ph.D. at National Institute of Technology Durgapur, India and his undergraduate studies at Burdwan University. His research interests lie in the area of Computer Vision and Artificial Intelligence, ranging from theory to design to implementation. He has collaborated actively with researchers in several other disciplines of computer science, physics, biology particularly computer vision application on problems at the multi disciplinary environment.
-<br/>
-Arif has served on roughly 25 conference and workshop program committees and served as the Organizing Chair for ICITAM 2017, Publication Chair in ICITAM 2019. He has served on the ICMC 2013, 2015, and 2019 as Organizing Member. He is a Senior Member of IEEE and Digital Life Norway (DLN).
+    Arif Ahmed is a Researcher in BioAI lab located in UiT The Arctic University of Norway. Previously he was an Assistant Professor at the School of Computer Science and Engineering, XIM University, Bhubaneswar, India (2021-2024). Before that, he was Post-doctoral Research Fellow in the Department of Physics and Technology at the UiT The Arctic University of Norway, TromsØ, Norway (2019-2021). From 2009 to 2019, he was an Assistant Professor of Computer Application at Haldia Institute of Technology, India. He holds an invited position as a Research Consultant in the Imaging Media Research Centre at the Korea Institute of Science and Technology (KIST), Korea, and in the School of Electrical Sciences at IIT Bhubaneswar, India.
+<\br>
+			Arif completed his Ph.D. at the National Institute of Technology Durgapur, India, and his undergraduate studies at Burdwan University. His research interests lie in the area of Computer Vision and Artificial Intelligence, ranging from theory to design to implementation. He has collaborated actively with researchers in several other disciplines of computer science, physics, and biology, particularly computer vision applications on problems in the multi-disciplinary environment.
+He is a Senior Member of IEEE and Digital Life Norway (DLN).
+		
 		</div>
 			
 <h2>Past Labs</h2>			
@@ -284,15 +283,20 @@ Arif has served on roughly 25 conference and workshop program committees and ser
 	
 	<ul>
 	
-	<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font>S. Mandal, A. A. Sk and S. K. Naskar, <b>Identification of Relevant Quantities in Arithmetic Word Problems using Siamese Neural Network</b>, 
-	<a href="https://icmc2021.in/" target="_blank"> 7th International Conference on Mathematics and Computing
-
+	<li>Feb'21,<font color="red"><b> Accepted !!! </b> </font> ICPR 2024, ICIP 2024
 ICMC 2021</a>, India</li>
   
   </ul>    
 	
 <h2>Activities</h2>
 <ul>
+
+<li>ARea Chair  <a href="https://events.iitbhilai.ac.in/icmc2025/" target="_blank">11th International Conference on Mathematics and Computing
+ICMC 2025
+</a>, India </li>
+	
+<li>Organizer  <a href="https://scse.xim.edu.in/news-events/xicai-2024/" target="_blank">XAVIER INTERNATIONAL CONFERENCE ON ARTIFICIAL INTELLIGENCE, XICAI 2024
+</a>, India </li>
 <li>PC Member  <a href="https://www.iaria.org/conferences2021/PATTERNS21.html" target="_blank">PATTERNS 2021, The Thirteenth International Conference on Pervasive Patterns and Applications
 </a>, Portugal </li>
 
