--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ ICMC 2021</a>, India</li>
 <h2>Activities</h2>
 <ul>
 
-<li>ARea Chair  <a href="https://events.iitbhilai.ac.in/icmc2025/" target="_blank">11th International Conference on Mathematics and Computing
+<li>Area Chair  <a href="https://events.iitbhilai.ac.in/icmc2025/" target="_blank">11th International Conference on Mathematics and Computing
 ICMC 2025
 </a>, India </li>
 	
