--- a/project.html
+++ b/project.html
@@ -259,6 +259,12 @@ button:visited {
     
     <h2>Projects</h2>
     <ul>
+
+	    <li>
+		<strong>OpenLivingCellAnalysis: Open- source technology for visualizing and analysis of fundamental proc- ess in living cell specifically organ- oids towards organoid specific knowledge discovery and disease understanding</strong>,  Funding Agency: SERB, Govt. of India, Status: Completed, Duration: May 2022-May 2024 		</li>
+		
+         <li>
+		 
 	
 			<li>
 		<strong>Data Intelligence for nanoscopy</strong>,  Funding Agency: UiT The Arctic University of Norway, Type: Post-doctoral Research, Status: Ongoing, Duration: May 2019-May 2022 [Principal Investigator Dr. 
