--- a/teaching.html
+++ b/teaching.html
@@ -229,9 +229,11 @@ button:visited {
 	<td>
 	<div id="DocInfo">
 		<h2>Sk. Arif Ahmed, Ph.D.</h2>
-		<h3> Assistant Professor, XIM University, Bhubaneswar, India
+		<h3> Senior Researcher, UiT The Arctic University of Norway, Norway;
 		<br/>
 		Senior Member, IEEE
+		<br/>
+		Former Assistant Professor, School of Computer Science and Engineering, XIM University, Bhubaneswar, India;
 		<br/>
 		Former Postdoc, Dept. of Physics and Technology, UiT The Arctic University of Norway, Norway;
 		<br/>
@@ -239,7 +241,6 @@ button:visited {
 		Email: <a href="mailto:skarifahmed@gmail.com">skarifahmed [at] gmail [dot] com
 	<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0706-2565" href="https://orcid.org/0000-0003-0706-2565" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-0706-2565</a></div>
 	<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en" href="https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="src/google-scholar-logo.jpg" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://scholar.google.co.in/citations?user=B1jf-RMAAAAJ&hl=en</a></div>
-
 	
 	</td>
 	</tr>
